--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@
 }
 
 header {
-  background-color: rgb(126, 94, 255);
-  color: rgb(192, 219, 109);
+  background-color: rgb(40, 27, 95);
+  color: white;
   padding: 2rem;
   display: flex;
   justify-content: center;
