--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,9 @@ header {
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 5em;
-  margin: 5em;
+  flex-wrap: wrap;
+  padding: 3rem;
+  margin: 3rem;
   background-color: rgb(169, 164, 229);
 }
 
@@ -40,6 +41,7 @@ header {
 .show__answer {
   display: flex;
   flex-direction: column;
+  align-self: center;
   position: absolute;
 
   /*   bottom: 2rem;
