--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,7 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-header {
-  background-color: rgb(40, 27, 95);
-  color: white;
-  padding: 2rem;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-}
-
-footer {
-  background-color: rgb(40, 27, 95);
-  color: white;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-.nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 5rem;
-}
-
-.question__card {
-  /*   display: flex;
-  flex-direction: column; */
-  position: relative;
-  flex-wrap: wrap;
-  padding: 3rem;
-  margin: 3rem;
-  border: 0.3rem solid rgb(22, 0, 53);
-  background-color: rgb(169, 164, 229);
-}
-
-.question__card .bookmark__icon {
-  /*  display: flex; */
-  position: absolute;
-  top: -1.5rem;
-  right: -0.5rem;
-  padding: 0.3rem;
-}
-
-.question {
-  /* display: flex; */
-  top: 0;
-  padding: 1rem;
-  margin-bottom: 5rem;
-}
-
-.show__answer {
-  /*   display: flex;
-  flex-direction: column;
-  align-self: center; */
-  position: absolute;
-  background-color: black;
-  color: white;
-  padding: 1rem;
-  border: 3px whitesmoke solid;
-  border-radius: 1rem;
-  bottom: 5rem;
-}
-
-.answer {
-  /*   display: flex;
-  flex-direction: column;
-  align-self: center; */
-  position: absolute;
-  padding: 1rem;
-  bottom: 1rem;
-}
+@import "./globals.css";
+@import "./header.css";
+@import "./body.css";
+@import "./main.css";
+@import "./card.css";
+@import "./button.css";
+@import "./footer.css";
